--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,12 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_CONNECTION=pgsql
+DB_HOST=postgres
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=project
+DB_USERNAME=project
+DB_PASSWORD=project
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
