--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,48 +1,68 @@
 stages:
   - tests
+  - build
   - deploy
+  - migrations
+
+variables:
+  POD: "kubernetes/test.yaml"
+  RC: "kubernetes/dev/rc.yaml"
+  CI_USER: "application"
+  CI_SHELL: "/bin/bash"
+
+
+build_development:
+  stage: build
+  script:
+    - build kubernetes/dev/php/Dockerfile
+    - build dep kubernetes/dev/sphinx/Dockerfile
+    - build dep kubernetes/dev/postgres/Dockerfile
+  only:
+    - master
+  tags:
+    - k8s-dev
+
+deploy_development:
+  stage: deploy
+  script:
+    - deploy
+    - replace
+    - proxy_updater dev.wip.ronasit.com
+  environment:
+    name: "wip-dev"
+  only:
+    - master
+  tags:
+    - k8s-dev
+
+migrations_development:
+  stage: migrations
+  script:
+    - run php artisan migrate --force
+  only:
+    - master
+  tags:
+    - k8s-dev
 
 tests:
   stage: tests
   variables:
-    MYSQL_DATABASE: homestead
-    MYSQL_ALLOW_EMPTY_PASSWORD: "1"
+    POSTGRES_USER: pguser
+    POSTGRES_PASSWORD: ""
+    POSTGRES_DB: pgdb
   image: webdevops/php:ubuntu-16.04
   services:
-    - redis
-    - mysql:5.6
+    - postgres:9.6
   before_script:
-    - cp .env.dev.testing .env.testing
+    - apt-get -qq update && apt-get -qq install php-pgsql php-imagick > /dev/null
+    - cp .env.dev.testing .env
     - composer -q install
-  artifacts:
-    paths:
-    - vendor
-    expire_in: 1 hour
   script:
-    - export REDIS_PORT="6379"
-    - php vendor/bin/phpunit --stop-on-failure ./tests/
+    - php vendor/bin/phpunit --stop-on-failure
   after_script:
     - cat storage/logs/laravel.log || true
   only:
-    - development
-  tags:
-    - docker
-    - linux
-
-deploy_development:
-  stage: deploy
-  image: projects.ronasit.com:4567/docker/k8s-deployer
-  environment:
-    name: "project-dev"
-    url: https://dev.api.project.ronasit.com
-  before_script:
-    - cp .env.dev .env
-  script:
-    - build kubernetes/dev/Dockerfile
-    - deploy
-    - replace
-  only:
-    - development
+    - master
   tags:
     - docker
     - linux
