--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
   "require": {
     "php": ">=7.1.0",
     "laravel/framework": "5.5.*",
-    "laravel/tinker": "~1.0"
+    "laravel/tinker": "~1.0",
+    "doctrine/dbal": "^2.5"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
@@ -32,7 +33,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Tests\\": "tests/"
+      "App\\Tests\\": "tests/"
     }
   },
   "scripts": {
