--- a/composer.json
+++ b/composer.json
@@ -8,15 +8,15 @@
   "license": "MIT",
   "type": "project",
   "require": {
-    "php": ">=7.1.0",
-    "laravel/framework": "5.5.*",
+    "php": ">=7.1.3",
+    "laravel/framework": "5.6.*",
     "laravel/tinker": "~1.0",
-    "doctrine/dbal": "^2.5"
+    "doctrine/dbal": "^2.6"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
     "mockery/mockery": "0.9.*",
-    "phpunit/phpunit": "~5.7",
+    "phpunit/phpunit": "~7.0",
     "ronasit/laravel-entity-generator": "1.*",
     "ronasit/laravel-swagger": ">=1.2",
     "ronasit/laravel-remote-data-collector": ">=1.0",
@@ -38,15 +38,13 @@
   },
   "scripts": {
     "post-install-cmd": [
-      "php artisan clear-compiled",
-      "php artisan optimize"
+      "php artisan clear-compiled"
     ],
     "post-update-cmd": [
       "Illuminate\\Foundation\\ComposerScripts::postUpdate",
       "php artisan clear-compiled",
       "php artisan ide-helper:generate",
-      "php artisan ide-helper:meta",
-      "php artisan optimize"
+      "php artisan ide-helper:meta"
     ],
     "post-root-package-install": [
       "php -r \"copy('.env.example', '.env');\""
