--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,10 @@
   "type": "project",
   "require": {
     "php": ">=7.1.3",
+    "doctrine/dbal": "^2.6",
     "laravel/framework": "5.6.*",
     "laravel/tinker": "~1.0",
-    "doctrine/dbal": "^2.6"
+    "symfony/yaml": "^4.1"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
