--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     "fzaninotto/faker": "~1.4",
     "mockery/mockery": "0.9.*",
     "phpunit/phpunit": "~7.0",
-    "ronasit/laravel-entity-generator": "1.*",
-    "ronasit/laravel-swagger": ">=1.2",
+    "ronasit/laravel-entity-generator": "1.1.*",
+    "ronasit/laravel-swagger": ">=1.3",
     "ronasit/laravel-remote-data-collector": ">=1.0",
     "barryvdh/laravel-cors": ">=0.8.0",
     "barryvdh/laravel-ide-helper": "^2.2"
@@ -58,5 +58,6 @@
     "preferred-install": "dist",
     "sort-packages": true,
     "optimize-autoloader": true
-  }
+  },
+  "minimum-stability": "beta"
 }
