#9:-added data collector-key-generation

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=
 APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
@@ -32,4 +32,4 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
-DATA_COLLECTOR_KEY=some-project-name
+DATA_COLLECTOR_KEY=
