#-: fixed host for testing in dev.env

--- a/.env.dev.testing
+++ b/.env.dev.testing
@@ -3,7 +3,7 @@ APP_ENV=testing
 APP_KEY=base64:HXcGBKtaIHO4wn+3N/36o+tsI5Kmu+0YG7IWCU6zEKA=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=https://dev.api.laravel.ronasit.com/
+APP_URL=http://localhost
 
 DB_CONNECTION=pgsql
 DB_HOST=postgres
