--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,9 +7,10 @@ image: projects.ronasit.com:4567/docker/gcloud-sdk:latest
 
 variables:
   CI_PROJECT_NAME: laravel
+  DOMAIN: api.laravel.ronasit.com
   DOCKERFILE: ./Dockerfile
   CHART_REPO: ronasit/laravel
-  CHART_VERSION: "2.0.6-beta"
+  CHART_VERSION: "2.0.7"
   CHART_VALUES: chart/values.yaml
   DOCKER_CONTAINER_REGISTRY: gcr.io/ronas-it-development/${CI_PROJECT_NAME}
 
@@ -86,7 +87,7 @@ deploy:
   <<: *deploy
   environment:
     name: review/$CI_COMMIT_REF_NAME
-    url: https://${CI_ENVIRONMENT_SLUG}.laravel.ronasit.com
+    url: https://${CI_ENVIRONMENT_SLUG}.${DOMAIN}
     on_stop: stop
   when: manual
   except:
@@ -110,7 +111,7 @@ deploy_development:
   <<: *deploy
   environment:
     name: "development"
-    url: https://dev.api.laravel.ronasit.com
+    url: https://dev.api.${DOMAIN}
   only:
     - development
 
