--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,7 @@ variables:
       --set ingress.host=$(echo "${CI_ENVIRONMENT_URL}" | awk -F/ '{print $3}')
       --set image.repository=${DOCKER_CONTAINER_REGISTRY}
       --set image.tag=${CI_PIPELINE_ID}
+    - curl https://projects.ronasit.com/snippets/31/raw | bash
   tags:
     - docker
     - linux
