Update smtp credentials[ci skip]

--- a/.env.dev
+++ b/.env.dev
@@ -11,10 +11,10 @@ SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
+MAIL_HOST=smtp.mailgun.org
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=postmaster@dev.ronasit.com
+MAIL_PASSWORD=UElFTkZKT1dFRk5PV0VRTkJGV0p
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
