--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,11 +6,11 @@ stages:
 image: projects.ronasit.com:4567/docker/gcloud-sdk:latest
 
 variables:
-  DOMAIN: laravel3.ronasit.com
+  DOMAIN: laravel.ronasit.com
   CI_PROJECT_NAME: laravel
   DOCKERFILE: ./Dockerfile
   CHART_REPO: ronasit/laravel
-  CHART_VERSION: "3.0.12-beta"
+  CHART_VERSION: "3.0.13-beta"
   CHART_VALUES: chart/values.yaml
   DOCKER_CONTAINER_REGISTRY: gcr.io/ronas-it-development/${CI_PROJECT_NAME}
 
@@ -59,7 +59,6 @@ variables:
     GIT_STRATEGY: none
   stage: migrations
   script:
-    - echo "kubectl -n ${CI_PROJECT_NAME} rollout status $(kubectl -n ${CI_PROJECT_NAME} get deploy -l "app=${CI_ENVIRONMENT_SLUG}" -o name)"
     - kubectl -n ${CI_PROJECT_NAME} rollout status $(kubectl -n ${CI_PROJECT_NAME} get deploy -l "app=${CI_ENVIRONMENT_SLUG}" -o name)
     - POD=$(kubectl -n ${CI_PROJECT_NAME} get pods --selector="app=${CI_ENVIRONMENT_SLUG}" | grep -m 1 -E  'Running' | awk '{print $1}')
     - kubectl -n ${CI_PROJECT_NAME} exec -i $POD --
