update ci script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,6 +88,8 @@ tests:
     expire_in: 1 hour
   script:
     - composer install
+    - php artisan jwt:secret
+    - php artisan key:generate
     - php vendor/bin/phpunit --stop-on-failure ./tests/
   after_script:
     - cat storage/logs/*.log || true
