update ci script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,6 +91,7 @@ tests:
     - composer install
     - php artisan jwt:secret
     - php artisan key:generate
+    - cat .env
     - php vendor/bin/phpunit --stop-on-failure ./tests/
   after_script:
     - cat storage/logs/*.log || true
