--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -8,10 +8,13 @@ ingress:
   enabled: true
 
 cronjobs:
-  enabled: false
+  enabled: true
+
+gcs:
+  enabled: true
 
 worker:
-  enabled: false
+  enabled: true
   replicaCount: 1
   cmd: "php /app/artisan queue:work --sleep=3 --tries=3"
 
