#23: add gcs package, add configs, update env files and gitlab-ci.yml

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,11 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
+FILESYSTEM_DRIVER=local
+GOOGLE_CLOUD_STORAGE_BUCKET=ronasit-development
+GOOGLE_CLOUD_PROJECT_ID=ronas-it-development
+GOOGLE_CLOUD_KEY_FILE=gcs.key
+
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
