--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "doctrine/dbal": "^2.6",
     "laravel/framework": "5.8.*",
     "laravel/tinker": "~1.0",
+    "superbalist/laravel-google-cloud-storage": "^2.2",
     "symfony/yaml": "^4.1"
   },
   "require-dev": {
