--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,14 +3,12 @@ stages:
   - deploy
   - migrations
 
-image: projects.ronasit.com:4567/docker/gcloud-sdk:latest
-
 variables:
   CI_PROJECT_NAME: laravel
   DOMAIN: laravel-empty-project.ronasit.com
   DOCKERFILE: ./Dockerfile
   CHART_REPO: ronasit/laravel
-  CHART_VERSION: 3.4.0-beta
+  CHART_VERSION: &ref 5.2.1-alpha
   CHART_VALUES: k8s/values.yaml
   DOCKER_CONTAINER_REGISTRY: gcr.io/ronas-it-development/${CI_PROJECT_NAME}
   APP_NAME: Laravel
@@ -19,56 +17,10 @@ variables:
   GOOGLE_CLOUD_PROJECT_ID: ronas-it-development
   GOOGLE_CLOUD_KEY_FILE: gcs.key
 
-.deploy_template: &deploy
-  stage: deploy
-  script:
-    - gcloud auth configure-docker
-    - docker build -t ${DOCKER_CONTAINER_REGISTRY}:${CI_PIPELINE_ID} -f ${DOCKERFILE} .
-    - docker push ${DOCKER_CONTAINER_REGISTRY}:${CI_PIPELINE_ID}
-    - helm repo update
-    - curl https://projects.ronasit.com/k8s-tools/charts/laravel/raw/${CHART_VERSION}/helpers/secrets.sh | bash
-    - helm upgrade --wait --install ${CI_PROJECT_NAME}-${CI_ENVIRONMENT_SLUG} ${CHART_REPO} --version ${CHART_VERSION} -f ${CHART_VALUES}
-      --namespace=${CI_PROJECT_NAME}
-      --set environment=${CI_ENVIRONMENT_SLUG}
-      --set appName=${APP_NAME}
-      --set ingress.hosts[0]=$(echo "${CI_ENVIRONMENT_URL}" | awk -F/ '{print $3}')
-      --set ingress.tls[0].secretName=${CI_PROJECT_NAME}-${CI_ENVIRONMENT_SLUG}-tls
-      --set ingress.tls[0].hosts[0]=$(echo "${CI_ENVIRONMENT_URL}" | awk -F/ '{print $3}')
-      --set secret=${CI_PROJECT_NAME}-${CI_ENVIRONMENT_SLUG}
-      --set image.repository=${DOCKER_CONTAINER_REGISTRY}
-      --set image.tag=${CI_PIPELINE_ID}
-      --set smtp.host=${MAIL_HOST}
-      --set-string smtp.port=${MAIL_PORT}
-      --set smtp.user=${MAIL_USERNAME}
-      --set smtp.password=${MAIL_PASSWORD}
-      --set gcs.key=${GCS_KEY_FILE}
-      --set image.tag=${CI_PIPELINE_ID}
-    - curl https://projects.ronasit.com/snippets/31/raw | bash
-  tags:
-    - docker
-    - linux
-
-.stop_template: &stop
-  stage: deploy
-  variables:
-    GIT_STRATEGY: none
-  script:
-    - helm delete --purge ${CI_PROJECT_NAME}-${CI_ENVIRONMENT_SLUG}
-  when: manual
-  tags:
-    - docker
-    - linux
-
-.migrations_template: &migrations
-  variables:
-    GIT_STRATEGY: none
-  stage: migrations
-  script:
-    - curl https://projects.ronasit.com/k8s-tools/charts/laravel/raw/${CHART_VERSION}/helpers/migrations.sh
-      | bash -s -- php artisan migrate
-  tags:
-    - docker
-    - linux
+include:
+  - project: 'k8s-tools/charts/laravel'
+    ref: *ref
+    file: '/helpers/.gitlab-ci-template.yml'
 
 tests:
   stage: tests
@@ -108,7 +60,7 @@ tests:
     - linux
 
 deploy:
-  <<: *deploy
+  extends: .deploy
   environment:
     name: review/$CI_COMMIT_REF_NAME
     url: https://${CI_ENVIRONMENT_SLUG}.${DOMAIN}
@@ -121,7 +73,7 @@ deploy:
     - tags
 
 stop:
-  <<: *stop
+  extends: .stop
   environment:
     name: review/$CI_COMMIT_REF_NAME
     action: stop
@@ -130,9 +82,9 @@ stop:
     - master
     - production
     - tags
-    
+        
 deploy_development:
-  <<: *deploy
+  extends: .deploy
   environment:
     name: "development"
     url: https://dev.${DOMAIN}
@@ -140,14 +92,14 @@ deploy_development:
     - development
 
 migrations_development:
-  <<: *migrations
+  extends: .migrations
   environment:
     name: "development"
   only:
     - development
 
 deploy_staging:
-  <<: *deploy
+  extends: .deploy
   variables:
     DOCKER_CONTAINER_REGISTRY: gcr.io/ronas-it-development/${CI_PROJECT_NAME}-stg
     SECRET_PREFIX: K8S_SECRET_STG_
@@ -158,7 +110,7 @@ deploy_staging:
     - master
 
 migrations_staging:
-  <<: *migrations
+  extends: .migrations
   environment:
     name: "staging"
   only:
