--- a/k8s/values.yaml
+++ b/k8s/values.yaml
@@ -6,11 +6,13 @@ persistence:
 
 ingress:
   enabled: true
+  annotations:
+    ingress.kubernetes.io/ssl-redirect: "true"
+    kubernetes.io/tls-acme: "true"
+    kubernetes.io/ingress.class: "nginx"
+    certmanager.k8s.io/cluster-issuer: letsencrypt-staging  #letsencrypt-prod for production
 
 cronjobs:
-  enabled: true
-
-gcs:
   enabled: true
 
 worker:
