--- a/k8s/values.yaml
+++ b/k8s/values.yaml
@@ -11,7 +11,7 @@ ingress:
     ingress.kubernetes.io/ssl-redirect: "true"
     kubernetes.io/tls-acme: "true"
     kubernetes.io/ingress.class: "nginx"
-    certmanager.k8s.io/cluster-issuer: letsencrypt-staging  #letsencrypt-prod for production
+    certmanager.k8s.io/cluster-issuer: letsencrypt-prod  #letsencrypt-staging for testing
 
 cronjobs:
   enabled: false
@@ -49,7 +49,7 @@ sqlproxy:
 postgres:
   enabled: true
   persistence:
-    enabled: false
+    enabled: true
     size: 1Gi
     
 mysql:
