--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,15 @@
     "laravel/framework": "5.8.*",
     "laravel/tinker": "~1.0",
     "superbalist/laravel-google-cloud-storage": "^2.2",
-    "symfony/yaml": "^4.1"
+    "symfony/yaml": "^4.1",
+    "ronasit/laravel-helpers":  "1.4.*@beta"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
     "mockery/mockery": "0.9.*",
     "phpunit/phpunit": "~7.0",
-    "ronasit/laravel-entity-generator": "1.3.*",
-    "ronasit/laravel-swagger": ">=1.3",
+    "ronasit/laravel-entity-generator": ">=1.3.2",
+    "ronasit/laravel-swagger": ">=1.4.3@beta",
     "ronasit/laravel-remote-data-collector": ">=1.0",
     "barryvdh/laravel-cors": ">=0.8.0",
     "barryvdh/laravel-ide-helper": "^2.2"
@@ -60,5 +61,5 @@
     "sort-packages": true,
     "optimize-autoloader": true
   },
-  "minimum-stability": "beta"
+  "minimum-stability": "dev"
 }
