--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,11 @@
   "license": "MIT",
   "type": "project",
   "require": {
-    "php": ">=7.1.3",
-    "doctrine/dbal": "^2.6",
-    "laravel/framework": "5.8.*",
-    "laravel/tinker": "~1.0",
+    "php": "^7.2.5",
+    "doctrine/dbal": "^2.10",
+    "laravel/framework": "^7.19",
+    "laravel/tinker": "^2.4",
+    "laravel/ui": "^2.1",
     "superbalist/laravel-google-cloud-storage": "^2.2",
     "symfony/yaml": "^4.1",
     "ronasit/laravel-helpers":  "1.4.*@beta"
@@ -19,11 +20,11 @@
   "require-dev": {
     "fzaninotto/faker": "~1.4",
     "mockery/mockery": "0.9.*",
-    "phpunit/phpunit": "~7.0",
+    "phpunit/phpunit": "^8.5",
     "ronasit/laravel-entity-generator": ">=1.3.2",
     "ronasit/laravel-swagger": ">=1.4.3@beta",
     "ronasit/laravel-remote-data-collector": ">=1.0",
-    "barryvdh/laravel-cors": ">=0.8.0",
+    "fruitcake/laravel-cors": "^1.0",
     "barryvdh/laravel-ide-helper": "^2.2"
   },
   "autoload": {
