--- a/k8s/values.yaml
+++ b/k8s/values.yaml
@@ -7,11 +7,6 @@ persistence:
 
 ingress:
   enabled: true
-  annotations:
-    ingress.kubernetes.io/ssl-redirect: "true"
-    kubernetes.io/tls-acme: "true"
-    kubernetes.io/ingress.class: "nginx"
-    certmanager.k8s.io/cluster-issuer: letsencrypt-prod  #letsencrypt-staging for testing
 
 cronjobs:
   enabled: false
@@ -19,7 +14,7 @@ cronjobs:
 worker:
   enabled: false
   replicaCount: 1
-  cmd: "php /app/artisan queue:work --sleep=3 --tries=3"
+  cmd: "php /app/artisan queue:work --sleep=3 --tries=3 --queue=default"
 
 migrate:
   enabled: true
@@ -37,14 +32,10 @@ gcs:
 # For Google Cloud SQL
 sqlproxy:
   enabled: false
-  serviceAccountKey: ""
   instance: ""
   project: ""
   region: ""
   port: "5432"
-  sqlUser: ""
-  sqlPassword: ""
-  sqlDatabase: ""
 
 postgres:
   enabled: true
