--- a/.env.testing
+++ b/.env.testing
@@ -1,13 +1,13 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=testing
 APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=pgsql
-DB_HOST=pgsql
-DB_PORT=5432
+DB_HOST=pgsql_test
+DB_PORT=5433
 DB_DATABASE=pgdb
 DB_USERNAME=pguser
 DB_PASSWORD=""
