--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,10 +60,8 @@ tests:
     expire_in: 1 hour
   script:
     - composer install
-    - echo 'APP_KEY=' > .env
-    - php artisan jwt:secret
-    - php artisan key:generate
-    - cp .env .env.testing
+    - php artisan jwt:secret --env=testing
+    - php artisan key:generate --env=testing
     - php vendor/bin/phpunit --stop-on-failure ./tests/
   after_script:
     - cat storage/logs/*.log || true
