fix running tests

--- a/.env.testing
+++ b/.env.testing
@@ -8,8 +8,8 @@ APP_URL=http://localhost
 DB_CONNECTION=pgsql
 DB_HOST=pgsql_test
 DB_PORT=5432
-DB_DATABASE=pgdb
-DB_USERNAME=pguser
+DB_DATABASE=forge
+DB_USERNAME=forge
 DB_PASSWORD=""
 
 BROADCAST_DRIVER=log
