--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,8 +43,8 @@ services:
         - 5433:5432
     environment:
       POSTGRES_PASSWORD: ""
-      POSTGRES_USER: pguser
-      POSTGRES_DB: pgdb
+      POSTGRES_USER: forge
+      POSTGRES_DB: forge
     volumes:
     - .:/app
     command: ["-c", "fsync=off"]
