--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,24 +27,26 @@ services:
           php.xdebug.max_nesting_level: 250
 
   pgsql:
-    image: ronasit/postgres:11.1
+    image: ronasit/postgres:11.9
     ports:
         - 5432:5432
     environment:
         POSTGRES_PASSWORD: ""
         POSTGRES_USER: pguser
         POSTGRES_DB: pgdb
+        POSTGRES_HOST_AUTH_METHOD: trust
     volumes:
       - .:/app
 
   pgsql_test:
-    image: ronasit/postgres:11.1
+    image: ronasit/postgres:11.9
     ports:
         - 5433:5432
     environment:
       POSTGRES_PASSWORD: ""
       POSTGRES_USER: forge
       POSTGRES_DB: forge
+      POSTGRES_HOST_AUTH_METHOD: trust
     volumes:
     - .:/app
     command: ["-c", "fsync=off"]
