--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "laravel/ui": "^2.1",
     "superbalist/laravel-google-cloud-storage": "^2.2",
     "symfony/yaml": "^4.4",
-    "ronasit/laravel-helpers":  "1.4.*@beta"
+    "ronasit/laravel-helpers":  "1.5.*@beta"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
@@ -23,8 +23,8 @@
     "phpunit/phpunit": "^8.5",
     "fruitcake/laravel-cors": "^2.0",
     "ronasit/laravel-entity-generator": ">=1.3.4",
-    "ronasit/laravel-swagger": ">=1.4.5@beta",
-    "ronasit/laravel-remote-data-collector": ">=1.3",
+    "ronasit/laravel-swagger": ">=1.6*@beta",
+    "ronasit/laravel-remote-data-collector": ">=1.6*@beta",
     "barryvdh/laravel-ide-helper": "^2.7"
   },
   "autoload": {
