--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
     "phpunit/phpunit": "^8.5",
     "fruitcake/laravel-cors": "^2.0",
     "ronasit/laravel-entity-generator": ">=1.3.4",
-    "ronasit/laravel-swagger": ">=1.6*@beta",
-    "ronasit/laravel-remote-data-collector": ">=1.6*@beta",
+    "ronasit/laravel-swagger": ">=1.6.*@beta",
+    "ronasit/laravel-remote-data-collector": ">=1.6.*@beta",
     "barryvdh/laravel-ide-helper": "^2.7"
   },
   "autoload": {
